tests/valid/58182_function_unit_type/function_unit_type.agu
-- Author: 58182, Gabriel Henriques

let unitFunction (_) : Unit -> Int = 1

let _ : Unit =
    let result : Int = unitFunction(unit) ;
    print(result)