tests/invalid/58182_missing_semicolon/missing_semicolon.agu
-- Author: 58182, Gabriel Henriques

let missingSemicolon : Int = 123
let anotherVar : Int = 456